2000-06-28  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-budget.c (entry_down_button_clicked): bug fix.

	* src/gnome/dialog-options.c: implement font options.

	* src/scm/prefs.scm: add options for the register fonts.

	* src/gnome/top-level.c: configure the register fonts from
	callbacks.

	* src/register/gnome/gnucash-style.c: make the register font and
	hint fonts configurable outside the register.

2000-06-28  Robert Graham Merkel  <rgmerk@mira.net>

	* src/gnome/dialog-totd.c: If somebody tries to open a second
	tip of the day window, just raise the original.  Fixes a crash
	when somebody tried to do this before.

2000-06-27  Robert Graham Merkel  <rgmerk@mira.net>

	* src/gnome/dialog-totd.c: Added code to make "Tip of the day"
	dialog modeless

2000-06-27  Dave Peticolas  <dave@krondo.com>

	* src/gnome/top-level.c (gnucash_ui_init): set the reconciled cell
	string getter to the dialog-utils function for i18ning the reconcile
	flag value.

	* src/engine/Transaction.c (xaccSplitSetReconcile): make sure the
	reconciled flag given is good.

	* src/register/splitreg.c: modify for the changes in the reconcile
	cell.

	* src/SplitLedger.c: modify for the changes in the reconcile cell.

	* src/register/recncell.c: make the reconcile cell a real object,
	not just a BasicCell with some extra functions. Add functionality
	for distinguishing between the flag value and the displayed value.

2000-06-26  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-utils.c (gnc_get_reconcile_str): new function.
	Return i18n'd string for reconciled flag.

	* src/gnome/reconcile-list.c: use i18n'd reconciled flag string.

	* src/scm/tip-of-the-day.scm: put the check for whether tips
	should be shown or not inside the hook. We can't do the check
	here because the options haven't been loaded yet.

	* src/scm/options.scm: fix bug in writing options. Use 'write'
	to output section and option names for proper escaping.

2000-06-27  Robert Graham Merkel  <rgmerk@mira.net>
